Update index.html to use img.jpg as logo and adjust image path for web display

--- a/lab-02/templates/index.html
+++ b/lab-02/templates/index.html
@@ -65,19 +65,20 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://file1.hutech.edu.vn/file/editor/homepage/stories/hinh34/logo%20CMYK-01.png" alt="hutech" class="logo">
+        <img src="/../lab-05/test/img.jpg" alt="hutech 30 năm" class="logo">
         
         <h2 class="title">BÀI THỰC HÀNH BẢO MẬT THÔNG TIN NÂNG CAO</h2>
         <p class="student-info">PHẠM PHÚ QUÝ 24800600803 HELLO WORLD!</p>
         
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title text-center mb-4">Danh sách các bài mã hóa</h5>
-                <ul class="list-group list-group-flush">
+                <h5 class="card-title text-center mb-4">Danh sách các bài mã hóa</h5>                <ul class="list-group list-group-flush">
                     <li class="list-group-item"><a href="/caesar">🔐 Caesar Cipher</a></li>
                     <li class="list-group-item"><a href="/playfair">🔐 Playfair Cipher</a></li>
                     <li class="list-group-item"><a href="/railfence">🔐 Rail Fence Cipher</a></li>
                     <li class="list-group-item"><a href="/vigenere">🔐 Vigenere Cipher</a></li>
+                    <li class="list-group-item"><a href="/rsa">🔐 RSA Cipher (lab-03)</a></li>
+                    <li class="list-group-item"><a href="/ecc">🔐 ECC Cipher (lab-03)</a></li>
                 </ul>
             </div>
         </div>
